# Sales_Streamlit_Dashboard

./: .gitignore  Makefile  README.md  pyproject.toml
.streamlit/: config.toml
assets/: .gitkeep
data/processed/: sample_data.parquet
scripts/: refresh_data.py
src/: __init__.py  app.py  config.py
src/components/: filters.py  footer.py  header.py  kpi_card.py
src/data/: loader.py
src/pages/: 01_overview.py  02_details.py
src/styles/: __init__.py  custom.py
src/utils/: formatting.py
tests/: test_formatting.py  test_loader.py
